<resources>
    <string name="app_name">SneakerShip</string>
    <string name="sneakership">SneakerShip</string>
    <string name="search">Serach</string>
    <string name="home">Home</string>
    <string name="checkout">Checkout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Nike Air</string>
    <string name="dollar">$</string>
    <string name="price">199</string>
    <string name="order_details">Order Details</string>
    <string name="sub_total">Sub Total :  </string>
    <string name="taxes_and_other_charges">Taxes And Other Charges : </string>
    <string name="total">Total :</string>
    <string name="check_out">Check Out</string>
    <string name="size">Size : </string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="colour">Colour :</string>
    <string name="cart">Cart</string>
    <string name="text_price">Price :</string>
</resources>